--- a/guides/_layouts/default.html
+++ b/guides/_layouts/default.html
@@ -25,17 +25,17 @@
 
       <div class="grid -between">
         <div class="cell -3of12">
-          <h3><a href="{% if site.development %}/{% else %}{{ site.baseurl }}{% endif %}">Readme</a></h3>
+          <h3><a href="{% if jekyll.environment == 'development' %}/{% else %}{{ site.baseurl }}{% endif %}">Readme</a></h3>
           <h3>Guides</h3>
           <ul>
-            <li><a href="{{ site.baseurl }}/guides/introduction/">Introduction</a></li>
-            <li><a href="{{ site.baseurl }}/guides/defining_your_schema/">Defining a Schema</a></li>
-            <li><a href="{{ site.baseurl }}/guides/executing_queries/">Executing Queries</a></li>
-            <li><a href="{{ site.baseurl }}/guides/code_reuse/">Code Reuse</a></li>
-            <li><a href="{{ site.baseurl }}/guides/security/">Security</a></li>
-            <li><a href="{{ site.baseurl }}/guides/testing/">Testing</a></li>
+            <li><a href="{{ site.baseurl }}/guides/introduction">Introduction</a></li>
+            <li><a href="{{ site.baseurl }}/guides/defining_your_schema">Defining a Schema</a></li>
+            <li><a href="{{ site.baseurl }}/guides/executing_queries">Executing Queries</a></li>
+            <li><a href="{{ site.baseurl }}/guides/code_reuse">Code Reuse</a></li>
+            <li><a href="{{ site.baseurl }}/guides/security">Security</a></li>
+            <li><a href="{{ site.baseurl }}/guides/testing">Testing</a></li>
           </ul>
-          <h3><a href="http://www.rubydoc.info/github/rmosolgo/graphql-ruby">API Docs<a/></h3>
+          <h3><a href="http://www.rubydoc.info/github/rmosolgo/graphql-ruby">API Docs</a></h3>
           <h3><a href="https://github.com/rmosolgo/graphql-ruby">Source Code</a></h3>
         </div>
         <div class="cell -9of12">
