Continue making site build improvements

--- a/guides/_layouts/default.html
+++ b/guides/_layouts/default.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>GraphQL Ruby</title>
-    <link rel="stylesheet" href="{{ site.baseurl }}/guides/css/main.css">
+    <link rel="stylesheet" href="{{ site.baseurl }}/css/main.css">
     <meta name="generator">
   </head>
   <body class="hack">
@@ -28,12 +28,12 @@
           <h3><a href="{% if jekyll.environment == 'development' %}/{% else %}{{ site.baseurl }}{% endif %}">Readme</a></h3>
           <h3>Guides</h3>
           <ul>
-            <li><a href="{{ site.baseurl }}/guides/introduction">Introduction</a></li>
-            <li><a href="{{ site.baseurl }}/guides/defining_your_schema">Defining a Schema</a></li>
-            <li><a href="{{ site.baseurl }}/guides/executing_queries">Executing Queries</a></li>
-            <li><a href="{{ site.baseurl }}/guides/code_reuse">Code Reuse</a></li>
-            <li><a href="{{ site.baseurl }}/guides/security">Security</a></li>
-            <li><a href="{{ site.baseurl }}/guides/testing">Testing</a></li>
+            <li><a href="{{ site.baseurl }}/introduction">Introduction</a></li>
+            <li><a href="{{ site.baseurl }}/defining_your_schema">Defining a Schema</a></li>
+            <li><a href="{{ site.baseurl }}/executing_queries">Executing Queries</a></li>
+            <li><a href="{{ site.baseurl }}/code_reuse">Code Reuse</a></li>
+            <li><a href="{{ site.baseurl }}/security">Security</a></li>
+            <li><a href="{{ site.baseurl }}/testing">Testing</a></li>
           </ul>
           <h3><a href="http://www.rubydoc.info/github/rmosolgo/graphql-ruby">API Docs</a></h3>
           <h3><a href="https://github.com/rmosolgo/graphql-ruby">Source Code</a></h3>
