--- a/guides/_layouts/default.html
+++ b/guides/_layouts/default.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>GraphQL Ruby</title>
     <link rel="stylesheet" href="{{ site.baseurl }}/css/main.css">
+    <link rel="icon" href="{{ site.baseurl }}/graphql-ruby-icon.png">
     <meta name="generator">
   </head>
   <body class="hack">
