Add link to relay guide

--- a/guides/_layouts/default.html
+++ b/guides/_layouts/default.html
@@ -33,6 +33,7 @@
             <li><a href="{{ site.baseurl }}/defining_your_schema">Defining a Schema</a></li>
             <li><a href="{{ site.baseurl }}/executing_queries">Executing Queries</a></li>
             <li><a href="{{ site.baseurl }}/code_reuse">Code Reuse</a></li>
+            <li><a href="{{ site.baseurl }}/relay">Relay</a></li>
             <li><a href="{{ site.baseurl }}/security">Security</a></li>
             <li><a href="{{ site.baseurl }}/testing">Testing</a></li>
           </ul>
