--- a/guides/_layouts/default.html
+++ b/guides/_layouts/default.html
@@ -8,6 +8,14 @@
     <meta name="generator">
   </head>
   <body class="hack">
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+      ga('create', 'UA-19264608-11', 'auto');
+      ga('send', 'pageview');
+    </script>
     <div class="container">
       <div style="display: flex; justify-content: center;">
 <strong style="white-space: pre; line-height: 1.1em; display: inline-block; font-size: 8px;">
@@ -44,7 +52,6 @@
                 <li><a href="{{ site.baseurl }}/queries/executing_queries">Executing Queries</a></li>
                 <li><a href="{{ site.baseurl }}/queries/authorization">Authorization</a></li>
                 <li><a href="{{ site.baseurl }}/queries/security">Security</a></li>
-                <li><a href="{{ site.baseurl }}/queries/optimization">Optimization</a></li>
                 <li><a href="{{ site.baseurl }}/queries/error_handling">Error Handling</a></li>
                 <li><a href="{{ site.baseurl }}/queries/phases_of_execution">Phases of Execution</a></li>
               </ul>
