add title to guides

--- a/guides/_layouts/default.html
+++ b/guides/_layouts/default.html
@@ -69,6 +69,7 @@
           <h3><a href="https://github.com/rmosolgo/graphql-ruby">Source Code</a></h3>
         </div>
         <div class="cell -9of12">
+          <h1 class="guide-header">{{ page.title }}</h1>
           {{ content }}
         </div>
       </div>
