add links to new guides

--- a/guides/_layouts/default.html
+++ b/guides/_layouts/default.html
@@ -43,6 +43,8 @@
                 <li><a href="{{ site.baseurl }}/schema/types_and_fields">Types and Fields</a></li>
                 <li><a href="{{ site.baseurl }}/schema/configuration_options">Configuration Options</a></li>
                 <li><a href="{{ site.baseurl }}/schema/code_reuse">Code Reuse</a></li>
+                <li><a href="{{ site.baseurl }}/schema/instrumentation">Instrumentation</a></li>
+                <li><a href="{{ site.baseurl }}/schema/limiting_visibility">Limiting Visibility</a></li>
                 <li><a href="{{ site.baseurl }}/schema/testing">Testing</a></li>
               </ul>
             </li>
@@ -64,6 +66,7 @@
                 <li><a href="{{ site.baseurl }}/relay/mutations">Mutations</a></li>
               </ul>
             </li>
+            <li><a href="{{ site.baseurl }}/related_projects">Related Projects</a></li>
           </ul>
           <h3><a href="http://www.rubydoc.info/github/rmosolgo/graphql-ruby">API Docs</a></h3>
           <h3><a href="https://github.com/rmosolgo/graphql-ruby">Source Code</a></h3>
