--- a/guides/_layouts/default.html
+++ b/guides/_layouts/default.html
@@ -44,6 +44,7 @@
                 <li><a href="{{ site.baseurl }}/schema/configuration_options">Configuration Options</a></li>
                 <li><a href="{{ site.baseurl }}/schema/code_reuse">Code Reuse</a></li>
                 <li><a href="{{ site.baseurl }}/schema/instrumentation">Instrumentation</a></li>
+                <li><a href="{{ site.baseurl }}/schema/lazy_execution">Lazy Execution</a></li>
                 <li><a href="{{ site.baseurl }}/schema/limiting_visibility">Limiting Visibility</a></li>
                 <li><a href="{{ site.baseurl }}/schema/testing">Testing</a></li>
               </ul>
