Add pro documentation

--- a/guides/_layouts/default.html
+++ b/guides/_layouts/default.html
@@ -67,8 +67,20 @@
                 <li><a href="{{ site.baseurl }}/relay/mutations">Mutations</a></li>
               </ul>
             </li>
+            <li>
+              <strong>GraphQL::Pro</strong>
+              <ul>
+                <li><a href="https://graphql.pro">GraphQL::Pro Home</a></li>
+                <li><a href="{{ site.baseurl }}/pro/installation">Installation & Updates</a></li>
+                <li><a href="{{ site.baseurl }}/pro/authorization">Authorization</a></li>
+                <li><a href="{{ site.baseurl }}/pro/monitoring">Monitoring</a></li>
+                <li><a href="{{ site.baseurl }}/pro/cursors">Stable Cursors<br/>for ActiveRecord</a></li>
+                <li><a href="{{ site.baseurl }}/pro/encoders">Encrypted, Versioned<br/>Cursors and Ids</a></li>
+              </ul>
+            </li>
             <li><a href="{{ site.baseurl }}/related_projects">Related Projects</a></li>
           </ul>
+          <h3><a href="https://tinyletter.com/graphql-ruby">GraphQL Ruby Newsletter</a></h3>
           <h3><a href="http://www.rubydoc.info/github/rmosolgo/graphql-ruby">API Docs</a></h3>
           <h3><a href="https://github.com/rmosolgo/graphql-ruby">Source Code</a></h3>
         </div>
