--- a/guides/css/main.css
+++ b/guides/css/main.css
@@ -11,6 +11,10 @@ html{font-size:12px}*{box-sizing:border-box;text-rendering:geometricPrecision}bo
   content: none;
 }
 
+.hack .container {
+  max-width: 90rem;
+}
+
 .hack li > ul {
   margin-top: 0;
   margin-bottom: 0;
@@ -65,6 +69,23 @@ h1.guide-header {
   font-size: 1.5em;
 }
 
+.img-set {
+  display: flex;
+  flex-direction: row;
+  margin-bottom: 20px;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.img-set .img-set-member {
+  max-height: 200px;
+  max-width: 500px;
+}
+
+.img-set a {
+  margin: 20px 0px;
+}
 
 /* pygments CSS, github theme */
 .highlight .hll { background-color: #ffffcc }
