--- a/guides/css/main.css
+++ b/guides/css/main.css
@@ -22,7 +22,7 @@ html{font-size:12px}*{box-sizing:border-box;text-rendering:geometricPrecision}bo
 
 .hack em { font-style: italic; }
 .hack strong { font-weight: bold; }
-.hack code.highlighter-rouge {
+.hack code {
   font-weight: normal;
   color: #cd3b60;
   border: 1px solid #cca5a5;
@@ -30,6 +30,11 @@ html{font-size:12px}*{box-sizing:border-box;text-rendering:geometricPrecision}bo
   border-radius: 2px;
   padding: 2px;
 }
+
+.hack .code .line-numbers {
+  display: none;
+}
+
 
 .hack a {
   color: #cd3b60;
