Fix(docs) use http for graphql-pro

--- a/guides/_layouts/default.html
+++ b/guides/_layouts/default.html
@@ -70,7 +70,7 @@
             <li>
               <strong>GraphQL::Pro</strong>
               <ul>
-                <li><a href="https://graphql.pro">GraphQL::Pro Home</a></li>
+                <li><a href="http://graphql.pro">GraphQL::Pro Home</a></li>
                 <li><a href="{{ site.baseurl }}/pro/installation">Installation & Updates</a></li>
                 <li><a href="{{ site.baseurl }}/pro/authorization">Authorization</a></li>
                 <li><a href="{{ site.baseurl }}/pro/monitoring">Monitoring</a></li>
