refactor(Generators) use graphql#execute action

--- a/lib/generators/graphql/templates/graphql_controller.erb
+++ b/lib/generators/graphql/templates/graphql_controller.erb
@@ -1,5 +1,5 @@
-class GraphqlsController < ApplicationController
-  def create
+class GraphqlController < ApplicationController
+  def execute
     variables = ensure_hash(params[:variables])
     query = params[:query]
     context = {
@@ -17,14 +17,16 @@ class GraphqlsController < ApplicationController
     case ambiguous_param
     when String
       if ambiguous_param.present?
-        JSON.parse(ambiguous_param)
+        ensure_hash(JSON.parse(ambiguous_param))
       else
         {}
       end
-    when Hash
+    when Hash, ActionController::Parameters
       ambiguous_param
-    else
+    when nil
       {}
+    else
+      raise ArgumentError, "Unexpected parameter: #{ambiguous_param}"
     end
   end
 end
