--- a/lib/generators/graphql/templates/object.erb
+++ b/lib/generators/graphql/templates/object.erb
@@ -1,5 +1,5 @@
 <%= type_ruby_name %> = GraphQL::ObjectType.define do
   name "<%= type_graphql_name %>"
-<% if options.node %>  interfaces [GraphQL::Relay::Node.interface]
+<% if options.node %>  implements GraphQL::Relay::Node.interface
 <% end %><% normalized_fields.each do |f| %>  field :<%= f[0] %>, <%= f[1] %>
 <% end %>end
