Add generators to getting started doc

--- a/guides/_layouts/default.html
+++ b/guides/_layouts/default.html
@@ -41,6 +41,7 @@
               <strong>Schema</strong>
               <ul>
                 <li><a href="{{ site.baseurl }}/schema/types_and_fields">Types and Fields</a></li>
+                <li><a href="{{ site.baseurl }}/schema/generators">Generators</a></li>
                 <li><a href="{{ site.baseurl }}/schema/configuration_options">Configuration Options</a></li>
                 <li><a href="{{ site.baseurl }}/schema/code_reuse">Code Reuse</a></li>
                 <li><a href="{{ site.baseurl }}/schema/instrumentation">Instrumentation</a></li>
