fix(EnumGenerator) use value: keyword

--- a/lib/generators/graphql/templates/enum.erb
+++ b/lib/generators/graphql/templates/enum.erb
@@ -1,4 +1,4 @@
 <%= type_ruby_name %> = GraphQL::EnumType.define do
   name "<%= type_graphql_name %>"
-<% prepared_values.each do |v| %>  value "<%= v[0] %>"<%= v.length > 1 ? ", #{v[1]}" : "" %>
+<% prepared_values.each do |v| %>  value "<%= v[0] %>"<%= v.length > 1 ? ", value: #{v[1]}" : "" %>
 <% end %>end
