Use types in generator template

--- a/lib/generators/graphql/templates/function.erb
+++ b/lib/generators/graphql/templates/function.erb
@@ -9,7 +9,7 @@ class Functions::<%= name %> < GraphQL::Function
   # end
 
   # add arguments by type:
-  # argument :id, !GraphQL::ID_TYPE
+  # argument :id, !types.ID
 
   # Resolve function:
   def call(obj, args, ctx)
