Update graphql-batch usage
0.3.2 includes the `use` functionality

--- a/lib/generators/graphql/templates/schema.erb
+++ b/lib/generators/graphql/templates/schema.erb
@@ -29,6 +29,5 @@
   }
 <% end %><% if options[:batch] %>
   # GraphQL::Batch setup:
-  lazy_resolve(Promise, :sync)
-  instrument(:query, GraphQL::Batch::Setup)
+  use GraphQL::Batch
 <% end %>end
