First mutations commit

--- a/guides/_layouts/default.html
+++ b/guides/_layouts/default.html
@@ -53,6 +53,7 @@
               <strong>Queries</strong>
               <ul>
                 <li><a href="{{ site.baseurl }}/queries/executing_queries">Executing Queries</a></li>
+                <li><a href="{{ site.baseurl }}/queries/mutations">Mutations</a></li>
                 <li><a href="{{ site.baseurl }}/queries/authorization">Authorization</a></li>
                 <li><a href="{{ site.baseurl }}/queries/security">Security</a></li>
                 <li><a href="{{ site.baseurl }}/queries/error_handling">Error Handling</a></li>
