--- a/guides/_layouts/guide.html
+++ b/guides/_layouts/guide.html
@@ -8,8 +8,9 @@ layout: default
   &raquo; {{ page.title }}
 </p>
 <h1 class="guide-header">{{ page.title }}</h1>
-{{ content }}
-
+<div class="guide-container">
+  {{ content }}
+</div>
 <script>
   // Find headers with IDs and wrap their text in `<a href={{id}}></a>`
   // That way people can easily copy the link.
