--- a/guides/_layouts/default.html
+++ b/guides/_layouts/default.html
@@ -23,7 +23,7 @@
         class="search-input"
         onkeyup="GraphQLRubySearch.run(this)"
         type="text"
-        placeholder="Search the guides..."
+        placeholder="Search the docs..."
       />
     </div>
     <div id="search-results"></div>
