--- a/guides/_layouts/default.html
+++ b/guides/_layouts/default.html
@@ -12,7 +12,7 @@
     <div class="header">
       <div class="nav">
         <a href="{{ site.baseurl }}/" class="img-link">
-          <img src="{{ site.baseurl }}/graphql-ruby.png" />
+          <img src="{{ site.baseurl }}/graphql-ruby.png" alt="GraphQL Ruby Logo" />
         </a>
         <span>GraphQL Ruby</span>
         <a href="{{ site.baseurl }}/getting_started">Getting Started</a>
