clean up header

--- a/guides/_layouts/default.html
+++ b/guides/_layouts/default.html
@@ -14,10 +14,9 @@
         <a href="{{ site.baseurl }}/" class="img-link">
           <img src="{{ site.baseurl }}/graphql-ruby.png" alt="GraphQL Ruby Logo" />
         </a>
-        <span>GraphQL Ruby</span>
-        <a href="{{ site.baseurl }}/getting_started">Getting Started</a>
+        <a href="{{ site.baseurl }}/getting_started">Get Started</a>
         <a href="{{ site.baseurl }}/guides">Guides</a>
-        <a href="http://www.rubydoc.info/github/rmosolgo/graphql-ruby">API Docs</a>
+        <a href="{% api_doc_root %}">API</a>
         <a href="https://tinyletter.com/graphql-ruby">Newsletter</a>
         <a href="https://github.com/rmosolgo/graphql-ruby">Source Code</a>
         <input
