--- a/guides/css/main.scss
+++ b/guides/css/main.scss
@@ -26,7 +26,7 @@ body {
   box-shadow: 0px 0px 10px 0px #d6d6d6;
   z-index: 1;
   position: relative;
-  
+
   .nav {
     background: white;
     $height: 30px;
@@ -38,8 +38,19 @@ body {
 
     .img-link {
       transition: background $fade-time;
+
+      img {
+        transition: filter $fade-time;
+        transition: -webkit-filter $fade-time;
+        filter: brightness(1) invert(0);
+        -webkit-filter: brightness(1) invert(0);
+      }
+
       &:hover {
-        background: white;
+        img {
+          -webkit-filter: brightness(0) invert(1);
+          filter: brightness(0) invert(1);
+        }
       }
     }
 
