Add operation name for multiple operation queries.
For multi-operation queries, GraphQL Controller throws error on default executor.

--- a/lib/generators/graphql/templates/graphql_controller.erb
+++ b/lib/generators/graphql/templates/graphql_controller.erb
@@ -2,11 +2,12 @@ class GraphqlController < ApplicationController
   def execute
     variables = ensure_hash(params[:variables])
     query = params[:query]
+    operation_name = params[:operationName]
     context = {
       # Query context goes here, for example:
       # current_user: current_user,
     }
-    result = <%= schema_name %>.execute(query, variables: variables, context: context)
+    result = <%= schema_name %>.execute(query, variables: variables, context: context, operation_name: operation_name)
     render json: result
   end
 
