--- a/lib/generators/graphql/templates/mutation.erb
+++ b/lib/generators/graphql/templates/mutation.erb
@@ -1,5 +1,5 @@
 Mutations::<%= mutation_name %> = GraphQL::Relay::Mutation.define do
-  name "<%= field_name %>"
+  name "<%= mutation_name %>"
   # TODO: define return fields
   # return_field :post, Types::PostType
 
